--- a/public/css/app.css
+++ b/public/css/app.css
@@ -88,7 +88,9 @@ header h1 {
     margin-right: auto; /* This pushes the h1 to the left */
 }
 
-
+/* -------------------------------------- */
+/*            auction list and cards      */
+/* -------------------------------------- */
 
 .auctions-list {
     display: flex;
@@ -114,39 +116,39 @@ header h1 {
     transform: translateY(-5px);
 }
 
-.image-container {
+.auction-card .image-container {
     height: 200px;
     overflow: hidden;
 }
 
-.image-container img {
+.auction-card .image-container img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.info-container .image-container img {
+.auction-card .info-container .image-container img {
     width: 100px;
     height: 100px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.info-container {
+.auction-card .info-container {
     padding: 15px;
     height: 40%;
     box-sizing: border-box;
 }
 
-h3 {
+.auction-card h3 {
     font-size: 18px;
     margin-bottom: 10px;
 }
 
-p {
+.auction-card p {
     margin-bottom: 10px;
 }
 
-.button {
+.auction-card .button {
     display: inline-block;
     padding: 10px 20px;
     margin: 10px 0;
@@ -159,6 +161,108 @@ p {
     transition: background-color 0.3s ease-in-out;
 }
 
-.button:hover {
+.auction-card .button:hover {
     background-color: #066c66;
+}
+
+#createAuctionButton {
+    background-color: #088F88;
+    border: none;
+    position: fixed;
+    bottom :15%;
+    right:10%;
+    color: white;
+}
+
+#createAuctionButton:hover {
+    background-color: #066c66;
+    cursor: pointer;
+}
+
+
+/* --------------------------------------------- */
+/*              auction details */
+/* --------------------------------------------- */
+
+.content {
+    display: flex;
+    max-width: 1200px;
+    margin: 20px auto;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    flex-direction: column; /* Change to column */
+}
+
+.left-column,
+.right-column,
+.bottom-content {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.left-column {
+    flex: 1;
+}
+
+.right-column {
+    flex: 1;
+    order: 0; /* Reset order for larger screens */
+}
+
+.bottom-content {
+    flex: 2;
+    order: 0; /* Reset order for larger screens */
+}
+
+.underline-text {
+    border-bottom: 2px solid #088F88;
+    display: inline-block;
+    margin-bottom: 10px;
+}
+
+.button {
+    display: inline-block;
+    padding: 10px 20px;
+    margin-top: 10px;
+    text-decoration: none;
+    color: #fff;
+    background-color: #088F88;
+    border: 1px solid #088F88;
+    border-radius: 3px;
+    color: white;
+}
+
+.button:hover,
+.button-outline:hover {
+    background-color: #066c66;
+    border-color: #066c66;
+    cursor: pointer;
+}
+
+.edit-delete-buttons {
+    margin-top: 20px;
+}
+
+.auction-description {
+    margin-bottom: 20px;
+}
+
+/* Responsive Design */
+@media (min-width: 768px) {
+    .content {
+        flex-direction: row;
+    }
+
+    .left-column {
+        margin-right: 20px; /* Adjust margin-right for larger screens */
+    }
+
+    .right-column {
+        margin-right: 20px; /* Adjust margin-right for larger screens */
+    }
+
+    .bottom-content {
+        order: 0; /* Reset order for larger screens */
+    }
 }
