--- a/public/css/app.css
+++ b/public/css/app.css
@@ -552,21 +552,84 @@ header h1 {
     padding: 20px;
 }
 
-.auction-card {
-    background-color: #fff;
+
+
+/* --------------------------------------------- */
+/*                   FAQ                         */
+/* --------------------------------------------- */
+
+.faq-list {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+
+.faq-card {
+    display: flex;
+    justify-content: space-between;
     border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    transition: transform 0.3s ease-in-out;
-    width: 500px;
-    height: 600px;
+    padding: 15px;
     margin-bottom: 30px;
-    box-sizing: border-box;
+    background-color: #fff;
+    transition: transform 0.3s ease-in-out;
+}
+
+.faq-card:hover {
+    transform: translateY(-5px);
+}
+
+.info-container {
+    flex-grow: 1;
+}
+
+.faq-card .underline-text {
+    text-decoration: underline;
+    text-decoration-color: var(--main-color);
+    text-decoration-thickness: 2px;
+    margin-bottom: 10px;
+}
+
+.faq-card .button {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 8px 16px;
+    font-size: 14px;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    border: 1px solid var(--main-color);
+    color: var(--main-color);
+    border-radius: 4px;
+    background-color: #fff;
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+.faq-card .button:hover {
+    background-color: var(--hover-color);
+    color: #fff;
+}
+
+/* Adjustments for smaller screens */
+@media (max-width: 600px) {
+    .faq-card {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    .faq-card:hover {
+        transform: none;
+    }
+
+    .faq-card .info-container {
+        margin-top: 15px;
+    }
 }
 
 
 
+/* --------------------------------------------- */
 /*                   about us                    */
 /* --------------------------------------------- */
 
