--- a/public/css/app.css
+++ b/public/css/app.css
@@ -657,3 +657,82 @@ header h1 {
     font-weight: bold;
     font-size: 18px;
 }
+
+
+
+/* --------------------------------------------- */
+/*                     Filters                   */
+/* --------------------------------------------- */
+
+body.modal-open {
+    overflow: hidden;
+}
+
+#filtersModal {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    max-width: 500px;
+    width: 80%;
+    padding: 30px;
+    z-index: 1000;
+    overflow-y: auto;
+}
+
+.modal-content {
+    position: relative;
+    color: black;
+}
+
+.close {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    font-size: 28px;
+    cursor: pointer;
+    color: #666;
+}
+
+#applyFilters {
+    margin-top: 30px;
+    padding: 15px 20px;
+    font-size: 16px;
+    background-color: var(--main-color);
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#applyFilters:hover {
+    background-color: var(--hover-color);
+}
+
+#categoriesFilter label {
+    text-decoration: underline;
+    margin-bottom: 15px;
+    display: block;
+    font-size: 18px;
+}
+
+#categoriesFilter input {
+    display: inline-block;
+    margin-right: 10px;
+    font-size: 16px;
+}
+
+#overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,0.5);
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+}
