--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Tilt Neon");
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,800&display=swap');
 
 /* Reset some default styles */
 body, h1, h2, h3, p, ul, ol, li {
@@ -85,7 +86,7 @@ header {
 
 header h1 {
     font-size: 40px;
-    font-family: 'Tilt Neon', sans-serif;
+    font-family: 'Raleway', sans-serif;
     padding-left: 40px;
     margin-right: auto; /* This pushes the h1 to the left */
 
